syntax = "proto3";

option go_package = "server/msgs";

message CharacterData {
    int32 id = 1;
    string name = 2;
    float hp = 3;
    float maxHp = 4;
    float x = 5;
    float y = 6;
    bool facingRight = 7;
    float speed = 8;
    bool defense = 9;
    bool dead = 10;
}

// 1
message InfoEvent {
    int32 id = 1;
    string name = 2;   
}

// 2
message UserDataEvent {
    repeated CharacterData users = 1;
}

// 3
message MyDataEvent {
    CharacterData data = 1;
}

// 4
message HitEvent {
    int32 id = 1;
    int32 target = 2;
    float dmg = 3;
}

// 5
message DeathEvent {
    int32 by = 1;
    int32 id = 2;
}

// 6
message AnimateEvent {
    int32 id = 1;
    int32 anime = 2;
}

// 7
message DisconnectedEvent {
    int32 id = 1;
}
